Apply modernization replacements
Co-authored-by: hazendaz <975267+hazendaz@users.noreply.github.com>